--- a/statics/bower.json
+++ b/statics/bower.json
@@ -23,6 +23,7 @@
     "moment": "~2.11.1",
     "select2": "~4.0.1",
     "angular-froala": "~2.1.0",
-    "ckeditor": "~4.5.6"
+    "ckeditor": "~4.5.6",
+    "ng-ckeditor": "~0.2.1"
   }
 }
